adding a gui, can only be ran through gradle