@@ -1,43 +1,46 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'java'
     id 'application'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
+def osName = System.getProperty("os.name").toLowerCase()
+def platform = osName.contains("win") ? "win" : osName.contains("mac") ? "mac" : "linux"
+
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation libs.junit.jupiter
-
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // This dependency is used by the application.
-    implementation libs.guava
+    implementation 'com.google.guava:guava:32.1.2-jre'
+    implementation "org.openjfx:javafx-base:21:${platform}"
+    implementation "org.openjfx:javafx-graphics:21:${platform}"
+    implementation "org.openjfx:javafx-controls:21:${platform}"
+    implementation "org.openjfx:javafx-fxml:21:${platform}"
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
 java {
+    modularity.inferModulePath.set(true)
     toolchain {
-        languageVersion = JavaLanguageVersion.of(19)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'dissertation.App'
+    mainClass = 'dissertation.Main'
 }
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
 }
